--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1134,6 +1134,11 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
+.bg-amber-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(251 191 36  / var(--tw-bg-opacity));
+  }
+
 .bg-green-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
@@ -1222,6 +1227,11 @@ video {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
+
+.px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
 
 .px-2 {
   padding-left: 0.5rem;
