--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -899,6 +899,7 @@ video {
 }
 
 .min-h-9 {
+    max-height: 2.5rem;
   min-height: 2.25rem;
 }
 
@@ -991,7 +992,8 @@ video {
 }
 
 .min-w-9 {
-  min-width: 2.25rem;
+    max-width: 2.5rem;
+    min-width: 2.25rem;
 }
 
 .min-w-\[150px\] {
@@ -1264,6 +1266,11 @@ video {
   background-color: rgba(0,0,0,0.5);
 }
 
+.bg-amber-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(251 191 36  / var(--tw-bg-opacity));
+  }
+
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -1391,6 +1398,11 @@ video {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
+
+.px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
 
 .px-2 {
   padding-left: 0.5rem;
