--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -666,6 +666,10 @@ video {
   grid-column: span 1 / span 1;
 }
 
+.col-span-12 {
+  grid-column: span 12 / span 12;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -716,9 +720,19 @@ video {
   margin-right: auto;
 }
 
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .my-auto {
@@ -728,6 +742,10 @@ video {
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-2 {
@@ -744,6 +762,10 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .mb-6 {
@@ -798,8 +820,16 @@ video {
   margin-top: 0.25rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
 }
 
 .mt-3 {
@@ -858,6 +888,10 @@ video {
   height: 3rem;
 }
 
+.h-14 {
+  height: 3.5rem;
+}
+
 .h-4 {
   height: 1rem;
 }
@@ -872,6 +906,10 @@ video {
 
 .h-\[200px\] {
   height: 200px;
+}
+
+.h-\[298\.4px\] {
+  height: 298.4px;
 }
 
 .h-\[298px\] {
@@ -898,9 +936,13 @@ video {
   height: 100%;
 }
 
+.min-h-4 {
+  min-height: 1rem;
+}
+
 .min-h-9 {
-    max-height: 2.5rem;
   min-height: 2.25rem;
+  max-height: 2.5rem;
 }
 
 .min-h-screen {
@@ -925,6 +967,10 @@ video {
 
 .w-32 {
   width: 8rem;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .w-40 {
@@ -991,9 +1037,17 @@ video {
   width: 100%;
 }
 
+.min-w-10 {
+  min-width: 2.5rem;
+}
+
+.min-w-4 {
+  min-width: 1rem;
+}
+
 .min-w-9 {
-    max-width: 2.5rem;
-    min-width: 2.25rem;
+  min-width: 2.25rem;
+  max-width: 2.5rem;
 }
 
 .min-w-\[150px\] {
@@ -1010,6 +1064,10 @@ video {
 
 .max-w-\[250px\] {
   max-width: 250px;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 .origin-bottom-left {
@@ -1072,6 +1130,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-start {
   align-items: flex-start;
 }
@@ -1120,8 +1182,20 @@ video {
   gap: 1rem;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-7 {
   gap: 1.75rem;
+}
+
+.self-end {
+  align-self: flex-end;
+}
+
+.self-center {
+  align-self: center;
 }
 
 .overflow-hidden {
@@ -1142,6 +1216,10 @@ video {
 
 .overflow-y-scroll {
   overflow-y: scroll;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 
 .rounded {
@@ -1172,9 +1250,19 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-e-full {
+  border-start-end-radius: 9999px;
+  border-end-end-radius: 9999px;
+}
+
 .rounded-s-2xl {
   border-start-start-radius: 1rem;
   border-end-start-radius: 1rem;
+}
+
+.rounded-s-full {
+  border-start-start-radius: 9999px;
+  border-end-start-radius: 9999px;
 }
 
 .rounded-t-md {
@@ -1262,6 +1350,11 @@ video {
   border-bottom-color: rgb(101 163 13 / var(--tw-border-opacity));
 }
 
+.bg-\[\#15803D\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.5\)\] {
   background-color: rgba(0,0,0,0.5);
 }
@@ -1269,7 +1362,7 @@ video {
 .bg-amber-400 {
     --tw-bg-opacity: 1;
     background-color: rgb(251 191 36  / var(--tw-bg-opacity));
-  }
+}
 
 .bg-blue-500 {
   --tw-bg-opacity: 1;
@@ -1304,6 +1397,11 @@ video {
 .bg-green-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 101 52 / var(--tw-bg-opacity));
+}
+
+.bg-lime-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 252 203 / var(--tw-bg-opacity));
 }
 
 .bg-lime-50 {
@@ -1402,7 +1500,7 @@ video {
 .px-1 {
     padding-left: 0.25rem;
     padding-right: 0.25rem;
-  }
+}
 
 .px-2 {
   padding-left: 0.5rem;
@@ -1481,16 +1579,40 @@ video {
   padding-bottom: 1rem;
 }
 
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
+.pe-4 {
+  padding-inline-end: 1rem;
+}
+
 .ps-10 {
   padding-inline-start: 2.5rem;
+}
+
+.ps-28 {
+  padding-inline-start: 7rem;
 }
 
 .pt-2 {
   padding-top: 0.5rem;
 }
 
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pt-28 {
+  padding-top: 7rem;
+}
+
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pt-32 {
+  padding-top: 8rem;
 }
 
 .pt-4 {
@@ -1525,6 +1647,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-\[28px\] {
@@ -1567,6 +1694,10 @@ video {
   font-weight: 600;
 }
 
+.font-thin {
+  font-weight: 100;
+}
+
 .italic {
   font-style: italic;
 }
@@ -1581,6 +1712,11 @@ video {
 
 .leading-tight {
   line-height: 1.25;
+}
+
+.text-\[\#798999\] {
+  --tw-text-opacity: 1;
+  color: rgb(121 137 153 / var(--tw-text-opacity));
 }
 
 .text-amber-400 {
@@ -1817,6 +1953,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:opacity-80:hover {
+  opacity: 0.8;
+}
+
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .active\:bg-green-700:active {
   --tw-bg-opacity: 1;
   background-color: rgb(21 128 61 / var(--tw-bg-opacity));
@@ -1866,6 +2012,10 @@ video {
     margin-top: 0px;
   }
 
+  .sm\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -1878,8 +2028,20 @@ video {
     display: grid;
   }
 
+  .sm\:h-20 {
+    height: 5rem;
+  }
+
+  .sm\:h-6 {
+    height: 1.5rem;
+  }
+
   .sm\:h-\[150px\] {
     height: 150px;
+  }
+
+  .sm\:h-\[230px\] {
+    height: 230px;
   }
 
   .sm\:h-\[250px\] {
@@ -1890,8 +2052,16 @@ video {
     width: 50%;
   }
 
+  .sm\:w-20 {
+    width: 5rem;
+  }
+
   .sm\:w-40 {
     width: 10rem;
+  }
+
+  .sm\:w-6 {
+    width: 1.5rem;
   }
 
   .sm\:w-60 {
@@ -1934,6 +2104,10 @@ video {
     width: auto;
   }
 
+  .sm\:min-w-\[200px\] {
+    min-width: 200px;
+  }
+
   .sm\:grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
@@ -1942,12 +2116,24 @@ video {
     grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
+  .sm\:flex-nowrap {
+    flex-wrap: nowrap;
+  }
+
+  .sm\:gap-14 {
+    gap: 3.5rem;
+  }
+
   .sm\:overflow-auto {
     overflow: auto;
   }
 
   .sm\:rounded-\[20px\] {
     border-radius: 20px;
+  }
+
+  .sm\:rounded-lg {
+    border-radius: 0.5rem;
   }
 
   .sm\:border {
@@ -1977,17 +2163,40 @@ video {
     padding-bottom: 2rem;
   }
 
+  .sm\:pt-28 {
+    padding-top: 7rem;
+  }
+
+  .sm\:pt-32 {
+    padding-top: 8rem;
+  }
+
   .sm\:pt-6 {
     padding-top: 1.5rem;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .sm\:text-\[28px\] {
     font-size: 28px;
   }
 
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .sm\:shadow-2xl {
@@ -2000,6 +2209,11 @@ video {
 @media (min-width: 1024px) {
   .lg\:static {
     position: static;
+  }
+
+  .lg\:mx-3 {
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
   }
 
   .lg\:mx-4 {
@@ -2043,6 +2257,11 @@ video {
   .lg\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
+  }
+
+  .lg\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 
   .lg\:pt-8 {
